--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,10 @@
 [tool.poetry]
 name = "hexlet-code"
 version = "0.1.0"
-description = ""
+description = "set of simple math games"
 authors = ["Andrey Silin <andronikus@yandex.ru>"]
 readme = "README.md"
+repository = https://github.com/Silin-Andrew/python-project-49
 packages = [
   { include = "brain_games" },
 ]
