--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = "set of simple math games"
 authors = ["Andrey Silin <andronikus@yandex.ru>"]
 readme = "README.md"
-repository = https://github.com/Silin-Andrew/python-project-49
+repository = "https://github.com/Silin-Andrew/python-project-49"
 packages = [
   { include = "brain_games" },
 ]
