--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,10 @@ description = "set of simple math games"
 authors = ["Andrey Silin <andronikus@yandex.ru>"]
 readme = "README.md"
 repository = "https://github.com/Silin-Andrew/python-project-49"
+classifiers = [
+  Programming Language :: Python :: 3.11
+  Framework :: Flake8
+]
 packages = [
   { include = "brain_games" },
 ]
